# LimeOS

./: .gitignore  CMakeLists.txt  README.md  bx_enh_dbg.ini
.old/: paging.cpp  paging.h  ramfs.cpp
drivers/i686/: build_all.sh
drivers/i686/gfx_term/: CMakeLists.txt
drivers/i686/grub_vbe/: CMakeLists.txt
drivers/i686/grub_vbe/src/: main.cpp
drivers/i686/serial/: CMakeLists.txt
drivers/i686/vga_textmode/: CMakeLists.txt  main.cpp
drivers/i686/vga_textmode/src/: main.cpp
emu/: bochsrc.bxrc
modules/i686/: build_all.sh  configure.sh
modules/i686/gfx_term/: CMakeLists.txt
modules/i686/gfx_term/src/: main.cpp
modules/i686/grub_vbe/: CMakeLists.txt
modules/i686/grub_vbe/src/: main.cpp
modules/i686/pci/: CMakeLists.txt
modules/i686/pci/src/: main.cpp  pcivendors.hpp
modules/i686/ps2_kbd/src/: main.cpp
modules/i686/serial/: CMakeLists.txt
modules/i686/serial/src/: main.cpp
modules/i686/vga_textmode/: CMakeLists.txt
modules/i686/vga_textmode/src/: main.cpp
ramfs/conf/: init.ksc
ramfs/misc/: font.bmf
ramfs/mod/: gfx_term.elf  grub_vbe.elf  pci.elf  serial.elf  vga_textmode.elf
ramfs/usr/fonts/: code_source_pro.bms  consolas.bms  ibm_flexi_12.bms  wtf.bms
src/: kernel.cpp
src/arch/arm/init/: init.cpp
src/arch/i686/: linker.ld
src/arch/i686/context/: scheduler.cpp  switch_context.asm  switch_context.h
src/arch/i686/gdt/: asm_gdt.asm  gdt.cpp  gdt.h
src/arch/i686/init/: init.cpp  init.h  loader.asm
src/arch/i686/interrupts/: asm_isr.asm  c_isr.cpp  idt.cpp  idt.h  pic.cpp  pic.h
src/arch/i686/kapi/: kapi.cpp  kapi.h
src/arch/i686/kapi/api/: cpuio.h  kapi.cpp  kapi.h  mctl.h  memory.cpp  memory.h  multiboot.h  new.cpp  new.h  scheduler.h  stdint.h  stream.cpp  stream.h  string.cpp  string.h  vector.h  vfs.h
src/arch/i686/paging/: asm_paging.asm  paging.cpp  paging.h
src/arch/i686/pit/: pit.cpp  pit.h
src/arch/i686/scheduler/: scheduler.asm  scheduler.cpp  scheduler.h
src/arch/i686/temp_vga/: terminal.cpp  terminal.h
src/common/: panic.h
src/common/elf/: elf.h  elfldr.cpp  elfldr.h  elfparser.cpp  elfparser.h
src/common/kernio/: kernio.cpp  kernio.h
src/common/kmod/: mctl.cpp  mctl.h  modules.cpp  modules.h
src/common/kscript/: kscript.cpp  kscript.h
src/common/misc/: liballoc.cpp  liballoc.h  memory.cpp  random.cpp  random.h  systicks.cpp  systicks.h
src/common/multiboot/: ksyms.cpp  ksyms.h  multiboot.cpp  multiboot.h
src/common/ramfs/: ramfs.cpp  ramfs.h  tarfs.cpp  tarfs.h
src/common/stdctl/: framebuffer.h  pci.h
src/common/vfs/: fileio.cpp  fileio.h  miscstreams.cpp  miscstreams.h  vfs.cpp  vfs.h
src/kstd/: icxxabi.cpp  icxxabi.h  map.h  math.h  new.cpp  new.h  stdarg.h  stream.cpp  stream.h  string.cpp  string.h  syscalls.cpp  syscalls.h  vector.h
src/kstd/old/: stream.cpp  stream.h  vector.h
tools/: build_iso.sh  build_ramfs.sh
